Allow to configure HostnameVerifier
Restore ZERO_DATE option that is deleted due to rebase.